should have fixed the flippy banner bar positioning on mobile

--- a/style/layout.styl
+++ b/style/layout.styl
@@ -265,34 +265,6 @@ body
 	width 100%
 	z-index 500
 
-.header-show
-	display inline-block
-	height 320px
-
-	@media screen and (max-width: 950px)
-			.header-show
-				width (100% / 6)
-
-	@media screen and (max-width: 800px)
-			.header-show
-				width (100% / 5)
-
-	@media screen and (max-width: 700px)
-			.header-show
-				width (100% / 4)
-
-	@media screen and (max-width: 600px)
-			.header-show
-				width (100% / 3)
-
-	@media screen and (max-width: 400px)
-			.header-show
-				width (100% / 2)
-
-	@media screen and (max-width: 300px)
-			.header-show
-				width (100%)
-
 .header-show, .header-short-pic
 	width 100%
 	margin 0
